--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,8 @@
 # Site settings
 title: WNY Human Rights Clinic
 email: wnyhrc@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
+description: Home base for the efforts of the WNYHRC
+baseurl: "wnyhrc"
 url: "http://wnyhrc.org"
 #twitter_username:
 #github_username:
