--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: WNY Human Rights Clinic
-email: wnyhrc@gmail.com
-description: WNY Human Rights Clinic
+title: Human Rights Initiative @ UB
+email: admin@hribuffalo.org
+description: Human Rights Initiative @ UB
 baseurl: ""
-url: "http://wnyhrc.org"
+url: "http://hribuffalo.org"
 #twitter_username:
 #github_username:
 
